# otfp

./: .gitignore  LICENSE  README.md  meson.build  meson_options.txt
doc/: otfp_doc.tex  referencesCFA.bib
examples/: README.md
examples/CVs/: line.namd  line.otfp  rmsd.namd  rmsd.otfp  test.sh
examples/NaCl/: .gpair.plt.swp  ClCl.bsp  ClCl.namd  ClCl_both.plt  NaCl.bsp  NaCl.namd  NaCl.xsc  NaCl15_wb30.psf  NaCl15_wb30_eqPT.xsc  NaCl_both.plt  NaNa.bsp  NaNa.namd  NaNa_both.plt  TAMDinputs.tcl  cv.inp  par_tip3p_ewald.inp
examples/OTFP/: OTFP.namd  job0.namd  job1.namd  test.plt  test.sh
examples/OTFP/reference/: job0.s  job0_ch0.fes  job1.s  job1_ch0.fes
examples/OTFP2D/: OTFP.namd  cv.inp  job0.namd  job1.namd  test.sh
examples/OTFP2D_periodic/: OTFP.namd  job0.namd  job1.namd  test.plt  test.sh
examples/OTFPbounds/: OTFP.namd  job0.namd  test.sh
examples/OTFPbounds/reference/: job0.s  job0_ch0.fes
examples/REMD_NVT/: job0.namd  job1.namd  test.sh  test0.plt  test1.plt
examples/REOTFP_NVT/: OTFP.namd  cv.inp  job0.namd  job1.namd  sortreplicas  test.sh  test0.plt  test1.plt
examples/aMDmap/: OTFP.namd  bias.blt  fes2D.blt  job0.namd  ramach.blt  refes.blt
examples/systems/: alad.coor  alad.vel  alad.xsc  alad_psfgen.psf  buta.psf  top_alad.str
examples/water/: cv.inp  rep1999.coor  t1.namd  tip3pE.psf  tip3pE.xsc  tip3p_ewald.par  wcaknots
scripts/: OTFP.namd  REMD_NPT.namd  REMD_NVT.namd  REOFP_NPT.namd  REOFP_NVT.namd  REOTFP_NPT.namd  REOTFP_NVT.namd  T4K15g15.namd  job0.namd  replica.namd
src/: addchapeaus.c  calcforces.tcl  catbinsp.c  centers.c  centers.h  centers.tcl  cfacv.c  cfacv.h  cfacv.i  cfacv.tcl  cfacv_obj.h  cfacv_tclforces.tcl  chapeau.c  chapeau.h  chapeau.tcl  chapeau_mkl.c  chapeau_mkl_obj.h  chapeau_obj.h  chapeau_old.h  convchapeau.c  cropchapeaus.c  cvs.c  cvs.h  cvs.i  cvs.tcl  cvs_obj.h  data.tcl  makefile  measurements.c  measurements.h  meson.build  restraints.tcl  simetrize.c  simetrize.h  tags
